fix editor overflow

--- a/app/assets/stylesheets/components/editors.css.scss
+++ b/app/assets/stylesheets/components/editors.css.scss
@@ -1,6 +1,6 @@
 #editor {
   display: none;
-  overflow: scroll;
+  overflow: auto;
   max-height: 800px;
   max-width: 100%;
   height: 300px;
